[gd_scene load_steps=4 format=3 uid="uid://in6xi4gjpedc"]

[ext_resource type="Texture2D" uid="uid://cdyymfiva2pmp" path="res://graphics/projectiles/blue.png" id="1_mbmj5"]
[ext_resource type="Script" path="res://scenes/projectiles/laser.gd" id="1_ut4od"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b6yhx"]
radius = 7.0
height = 162.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 6
script = ExtResource("1_ut4od")

[node name="LaserImage" type="Sprite2D" parent="."]
texture = ExtResource("1_mbmj5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_b6yhx")

[node name="LaserLifeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LaserLifeTimer" to="." method="_on_laser_life_timer_timeout"]
